sdelal polovinu krivogo adaptiva dlya 1366 + 1440

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="logo-img1"></div>
-  <span>WorkPoint</span>
+  <a routerLink='/main'>WorkPoint</a>
 </div>
 
 <form class="card" [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -8,7 +8,7 @@
     <span>Добро пожаловать на</span>
     <br>
     <img src="assets/img/W-logo.svg" class="logo-img2">
-    <a class="title" routerLink="/main">WorkPoint</a>
+    <a class="title">WorkPoint</a>
   </div>
 
   <div class="card-right-side">
