--- a/src/app/components/add-coworking/add-coworking.component.css
+++ b/src/app/components/add-coworking/add-coworking.component.css
@@ -345,35 +345,35 @@
   }
 }
 
-@media screen and (max-width: 1550px) {
+@media screen and (max-width: 1450px) {
   .return {
-    margin-left: 116.44px;
-    margin-top: 12.78px;
-    margin-bottom: 41.89px;
-    font-size: 10.65px;
-    line-height: 14.2px;
+    margin-left: calc(0.75*164px);
+    margin-top: calc(0.83*18px);
+    margin-bottom: calc(0.83*59px);
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
   .return img {
-    padding-right: 9.94px;
+    padding-right: calc(0.75*14px);
   }
 
   .card-container {
-    width: 856.26px;
-    margin-left: 252.76px;
+    width: calc(0.75*1206px);
+    margin-left: calc(0.75*356px);
   }
 
   .card-title {
     font-weight: 700;
-    font-size: 19.88px;
-    line-height: 26.98px;
-    margin-bottom: 22.72px;
+    font-size: calc(0.75*28px);
+    line-height: calc(0.83*38px);
+    margin-bottom: calc(0.83*32px);
   }
 
   .flex {
     display: flex;
-    gap: 58.22px;
+    gap: calc(0.75*82px);
   }
 
   input {
@@ -381,102 +381,102 @@
   }
 
   .input-field {
-    width: 397.6px;
-    height: 44px;
+    width: calc(0.75*560px);
+    height: calc(0.83*62px);
     border-radius: 20px;
     background: #E0E0D6;
-    margin-bottom: 14.2px;
+    margin-bottom: calc(0.83*20px);
   }
 
   .input-field input {
-    width: 369.2px;
-    height: 36.92px;
+    width: calc(0.75*520px);
+    height: calc(0.83*52px);
     font-weight: 400;
-    font-size: 10.65px;
-    line-height: 19.88px;
-    padding-left: 19.88px;
-    margin-top: 2.84px;
-    margin-left: 3.55px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+    padding-left: calc(0.75*28px);
+    margin-top: calc(0.83*4px);
+    margin-left: calc(0.75*5px);
     background: inherit;
-    border-radius: 7.1px;
+    border-radius: 10px;
   }
 
   .description {
     display: inline-block;
     position: relative;
-    width: 852px;
-    height: 198.1px;
+    width: calc(0.75*1200px);
+    height: calc(0.83*279px);
     border-radius: 20px;
     background: #E0E0D6;
-    margin-bottom: 22.72px;
+    margin-bottom: calc(0.83*32px);
     vertical-align: bottom;
   }
 
   .description-input {
-    width: 827.15px;
+    width: calc(0.75*1165px);
     font-weight: 300;
-    font-size: 10.65px;
-    line-height: 19.9px;
-    padding-left: 19.9px;
-    margin-top: 3.55px;
-    margin-left: 1.42px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+    padding-left: calc(0.75*28px);
+    margin-top: calc(0.83*5px);
+    margin-left: calc(0.75*2px);
     background: inherit;
-    border-radius: 7.1px;
+    border-radius: 10px;
   }
 
   .filters h1 {
     font-weight: 600;
-    font-size: 18.46px;
-    line-height: 24.85px;
-    margin-bottom: 21.3px;
+    font-size: calc(0.75*26px);
+    line-height: calc(0.83*35px);
+    margin-bottom: calc(0.83*30px);
   }
 
   .input-field select {
     border: none;
-    width: 390.5px;
-    height: 36.92px;
+    width: calc(0.75*550px);
+    height: calc(0.83*52px);
     font-weight: 300;
-    font-size: 10.65px;
-    line-height: 19.9px;
-    padding-left: 19.9px;
-    margin-top: 2.84px;
-    margin-left: 3.55px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+    padding-left: calc(0.75*28px);
+    margin-top: calc(0.83*4px);
+    margin-left: calc(0.75*5px);
     background: #E0E0D6;
     border-radius: 10px;
   }
 
   .filter-tags {
     position: relative;
-    width: 850.58px;
-    height: 130.64px;
-    margin-bottom: 17.04px;
+    width: calc(0.75*1198px);
+    height: calc(0.83*184px);
+    margin-bottom: calc(0.83*24px);
   }
 
   .filter-tags span {
     font-weight: 600;
-    font-size: 14.2px;
-    line-height: 19.17px;
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*27px);
   }
 
   .filter-tags h5 {
-    font-size: 10.65px;
-    line-height: 19.9px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
     color: rgba(27, 31, 59, 0.4);
   }
 
   .pressed-tags {
-    margin-top: 9.94px;
+    margin-top: calc(0.83*14px);
     display: flex;
-    gap: 15.62px;
+    gap: calc(0.75*22px);
   }
 
   .pressed-tag {
 
     text-align: center;
-    min-width: 56.8px;
-    max-width: 120.7px;
-    font-size: 14.2px;
-    line-height: 126.16%;
+    min-width: calc(0.75*80px);
+    max-width: calc(0.75*170px);
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*177.69%);
     background: #E0E0D6;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
@@ -484,34 +484,34 @@
   }
 
   .tags-input {
-    padding-left: 18.46px;
+    padding-left: calc(0.75*26px);
   }
 
   .tags-container {
     position: absolute;
     bottom: 0;
-    width: 850.58px;
-    height: 102.95px;
+    width: calc(0.75*1198px);
+    height: calc(0.83*145px);
     background: #D1E5D2;
     border-radius: 10px;
   }
 
   .btn-settings {
     position: absolute;
-    right: 14.2px;
-    top: 14.2px;
+    right: calc(0.75*20px);
+    top: calc(0.83*20px);
   }
 
   .dropdown {
     position: absolute;
-    right: 14.2px;
-    top: 28.4px;
+    right: calc(0.75*20px);
+    top: calc(0.83*40px);
   }
 
   .dropdown-menu {
-    padding-top: 8.52px;
-    padding-left: 8.52px;
-    padding-right: 8.52px;
+    padding-top: calc(0.83*12px);
+    padding-left: calc(0.75*12px);
+    padding-right: calc(0.75*12px);
     background: #FBFBF5;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 7px;
@@ -532,10 +532,10 @@
   }
 
   .dropdown-link {
-    margin-bottom: 8.52px;
+    margin-bottom: calc(0.83*12px);
     display: block;
     color: #494C62;
-    padding: 7.81px 7.81px;
+    padding: calc(0.83*11px) calc(0.75*11px);
     opacity: 0.7;
 
     box-sizing: border-box;
@@ -548,15 +548,15 @@
   }
 
   .photo-container {
-    width: 705.5696px;
-    margin-bottom: 49.7px;
+    width: calc(0.75*993.76px);
+    margin-bottom: calc(0.83*70px);
   }
 
   .photo {}
 
   .photo .first-photo {
-    width: 440.5905px;
-    height: 258.44px;
+    width: calc(0.75*620.55px);
+    height: calc(0.83*364px);
     background: rgba(190, 218, 195, 0.7);
     border-radius: 20px;
   }
@@ -564,28 +564,28 @@
   .btn-first-photo {
     position: absolute;
 
-    width: 440.5905px;
-    height: 258.44px;
+    width: calc(0.75*620.55px);
+    height: calc(0.83*364px);
   }
 
   .preview-img {
-    width: 440.5905px;
-    height: 258.44px;
+    width: calc(0.75*620.55px);
+    height: calc(0.83*364px);
     border-radius: 20px;
   }
 
   .photo-container h1 {
     font-weight: 600;
-    font-size: 18.46px;
-    line-height: 24.85px;
-    margin-bottom: 8.52px;
+    font-size: calc(0.75*26px);
+    line-height: calc(0.83*35px);
+    margin-bottom: calc(0.83*12px);
   }
 
   .photo-container h2 {
     font-weight: 300;
-    font-size: 10.65px;
-    line-height: 14.2px;
-    margin-bottom: 19.9px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*20px);
+    margin-bottom: calc(0.83*28px);
   }
 
   .dn {
@@ -596,21 +596,21 @@
 
   .buttons-submit {
     display: flex;
-    gap: 26.27px;
-    margin-bottom: 106.5px;
+    gap: calc(0.75*37px);
+    margin-bottom: calc(0.83*150px);
   }
 
   .button-add {
-    width: 156.2px;
-    height: 38.34px;
+    width: calc(0.75*220px);
+    height: calc(0.83*54px);
     background-color: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
   }
 
   .button-return {
-    width: 156.2px;
-    height: 38.34px;
+    width: calc(0.75*220px);
+    height: calc(0.83*54px);
     border: 1px solid #EDEDED;
     filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.16));
     border-radius: 10px;
@@ -621,18 +621,18 @@
   .filter-labels {
     display: flex;
     flex-direction: column;
-    margin-bottom: 11.36px;
+    margin-bottom: calc(0.83*16px);
   }
 
   .filter-conference {
-    margin-bottom: 22.72px;
+    margin-bottom: calc(0.83*32px);
   }
 
   .contacts h1 {
     font-weight: 600;
-    font-size: 18.46px;
-    line-height: 24.85px;
-    margin-bottom: 21.3px;
+    font-size: calc(0.75*26px);
+    line-height: calc(0.83*35px);
+    margin-bottom: calc(0.83*30px);
   }
 
 
@@ -646,28 +646,28 @@
     display: inline-flex;
     align-items: center;
     user-select: none;
-    font-size: 15.62px;
-    line-height: 21.3px;
+    font-size: calc(0.75*22px);
+    line-height: calc(0.83*30px);
     font-weight: 400;
   }
 
   .custom-radio+label::before {
     content: '';
     display: inline-block;
-    width: 16.046px;
-    height: 17.04px;
-    margin-right: 13.49px;
-    margin-left: 10.65px;
+    width: calc(0.75*22.6px);
+    height: calc(0.83*24px);
+    margin-right: calc(0.75*19px);
+    margin-left: calc(0.75*15px);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100% 100%;
   }
 
   .red-text {
-    font-size: 8.52px;
+    font-size: calc(0.75*12px);
     display: inline-block;
     color: red;
-    padding-top: 7.1px;
+    padding-top: calc(0.83*10px);
   }
 
   .invalid {
@@ -675,7 +675,342 @@
   }
 
   .description-warning {
-    padding-top: 163.3px;
-    padding-left: 7.1px;
+    padding-top: calc(0.83*230px);
+    padding-left: calc(0.75*10px);
+  }
+}
+
+@media screen and (max-width: 1370px) {
+  .return {
+    margin-left: calc(0.71*164px);
+    margin-top: calc(0.71*18px);
+    margin-bottom: calc(0.71*59px);
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*20px);
+    color: rgba(27, 31, 59, 0.65);
+  }
+
+  .return img {
+    padding-right: calc(0.71*14px);
+  }
+
+  .card-container {
+    width: calc(0.71*1206px);
+    margin-left: calc(0.71*356px);
+  }
+
+  .card-title {
+    font-weight: 700;
+    font-size: calc(0.71*28px);
+    line-height: calc(0.71*38px);
+    margin-bottom: calc(0.71*32px);
+  }
+
+  .flex {
+    display: flex;
+    gap: calc(0.71*82px);
+  }
+
+  input {
+    cursor: pointer;
+  }
+
+  .input-field {
+    width: calc(0.71*560px);
+    height: calc(0.71*62px);
+    border-radius: 20px;
+    background: #E0E0D6;
+    margin-bottom: calc(0.71*20px);
+  }
+
+  .input-field input {
+    width: calc(0.71*520px);
+    height: calc(0.71*52px);
+    font-weight: 400;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    padding-left: calc(0.71*28px);
+    margin-top: calc(0.71*4px);
+    margin-left: calc(0.71*5px);
+    background: inherit;
+    border-radius: 10px;
+  }
+
+  .description {
+    display: inline-block;
+    position: relative;
+    width: calc(0.71*1200px);
+    height: calc(0.71*279px);
+    border-radius: 20px;
+    background: #E0E0D6;
+    margin-bottom: calc(0.71*32px);
+    vertical-align: bottom;
+  }
+
+  .description-input {
+    width: calc(0.71*1165px);
+    font-weight: 300;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    padding-left: calc(0.71*28px);
+    margin-top: calc(0.71*5px);
+    margin-left: calc(0.71*2px);
+    background: inherit;
+    border-radius: 10px;
+  }
+
+  .filters h1 {
+    font-weight: 600;
+    font-size: calc(0.71*26px);
+    line-height: calc(0.71*35px);
+    margin-bottom: calc(0.71*30px);
+  }
+
+  .input-field select {
+    border: none;
+    width: calc(0.71*550px);
+    height: calc(0.71*52px);
+    font-weight: 300;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    padding-left: calc(0.71*28px);
+    margin-top: calc(0.71*4px);
+    margin-left: calc(0.71*5px);
+    background: #E0E0D6;
+    border-radius: 10px;
+  }
+
+  .filter-tags {
+    position: relative;
+    width: calc(0.71*1198px);
+    height: calc(0.71*184px);
+    margin-bottom: calc(0.71*24px);
+  }
+
+  .filter-tags span {
+    font-weight: 600;
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*27px);
+  }
+
+  .filter-tags h5 {
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    color: rgba(27, 31, 59, 0.4);
+  }
+
+  .pressed-tags {
+    margin-top: calc(0.71*14px);
+    display: flex;
+    gap: calc(0.71*22px);
+  }
+
+  .pressed-tag {
+
+    text-align: center;
+    min-width: calc(0.71*80px);
+    max-width: calc(0.71*170px);
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*177.69%);
+    background: #E0E0D6;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    transition: all .2s ease-out;
+  }
+
+  .tags-input {
+    padding-left: calc(0.71*26px);
+  }
+
+  .tags-container {
+    position: absolute;
+    bottom: 0;
+    width: calc(0.71*1198px);
+    height: calc(0.71*145px);
+    background: #D1E5D2;
+    border-radius: 10px;
+  }
+
+  .btn-settings {
+    position: absolute;
+    right: calc(0.71*20px);
+    top: calc(0.71*20px);
+  }
+
+  .dropdown {
+    position: absolute;
+    right: calc(0.71*20px);
+    top: calc(0.71*40px);
+  }
+
+  .dropdown-menu {
+    padding-top: calc(0.71*12px);
+    padding-left: calc(0.71*12px);
+    padding-right: calc(0.71*12px);
+    background: #FBFBF5;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    transition: all .2s ease-out;
+  }
+
+  .dropdown-menu.show {
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .dropdown-menu button:hover {
+    opacity: 1;
+  }
+
+  .dropdown-link {
+    margin-bottom: calc(0.71*12px);
+    display: block;
+    color: #494C62;
+    padding: calc(0.71*11px) calc(0.71*11px);
+    opacity: 0.7;
+
+    box-sizing: border-box;
+    background: #E0E0D6;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+
+    color: #000000;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .photo-container {
+    width: calc(0.71*993.76px);
+    margin-bottom: calc(0.71*70px);
+  }
+
+  .photo {}
+
+  .photo .first-photo {
+    width: calc(0.71*620.55px);
+    height: calc(0.71*364px);
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 20px;
+  }
+
+  .btn-first-photo {
+    position: absolute;
+
+    width: calc(0.71*620.55px);
+    height: calc(0.71*364px);
+  }
+
+  .preview-img {
+    width: calc(0.71*620.55px);
+    height: calc(0.71*364px);
+    border-radius: 20px;
+  }
+
+  .photo-container h1 {
+    font-weight: 600;
+    font-size: calc(0.71*26px);
+    line-height: calc(0.71*35px);
+    margin-bottom: calc(0.71*12px);
+  }
+
+  .photo-container h2 {
+    font-weight: 300;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*20px);
+    margin-bottom: calc(0.71*28px);
+  }
+
+  .dn {
+    display: none;
+  }
+
+  .btn-photo {}
+
+  .buttons-submit {
+    display: flex;
+    gap: calc(0.71*37px);
+    margin-bottom: calc(0.71*150px);
+  }
+
+  .button-add {
+    width: calc(0.71*220px);
+    height: calc(0.71*54px);
+    background-color: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+  }
+
+  .button-return {
+    width: calc(0.71*220px);
+    height: calc(0.71*54px);
+    border: 1px solid #EDEDED;
+    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.16));
+    border-radius: 10px;
+  }
+
+
+
+  .filter-labels {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: calc(0.71*16px);
+  }
+
+  .filter-conference {
+    margin-bottom: calc(0.71*32px);
+  }
+
+  .contacts h1 {
+    font-weight: 600;
+    font-size: calc(0.71*26px);
+    line-height: calc(0.71*35px);
+    margin-bottom: calc(0.71*30px);
+  }
+
+
+  .custom-radio {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+
+  .custom-radio+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    font-size: calc(0.71*22px);
+    line-height: calc(0.71*30px);
+    font-weight: 400;
+  }
+
+  .custom-radio+label::before {
+    content: '';
+    display: inline-block;
+    width: calc(0.71*22.6px);
+    height: calc(0.71*24px);
+    margin-right: calc(0.71*19px);
+    margin-left: calc(0.71*15px);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100% 100%;
+  }
+
+  .red-text {
+    font-size: calc(0.71*12px);
+    display: inline-block;
+    color: red;
+    padding-top: calc(0.71*10px);
+  }
+
+  .invalid {
+    border: 1px #CC0000 solid;
+  }
+
+  .description-warning {
+    padding-top: calc(0.71*230px);
+    padding-left: calc(0.71*10px);
   }
 }
