--- a/src/app/components/favourites-page/favourites-page.component.css
+++ b/src/app/components/favourites-page/favourites-page.component.css
@@ -62,46 +62,46 @@
 
 }
 
-@media screen and (max-width: 1550px) {
+@media screen and (max-width: 1450px) {
   .return-to-main {
     display: flex;
-    width: 127.8px;
-    margin-left: 119.28px;
-    margin-bottom: 46.15px;
+    width: calc(0.75*180px);
+    margin-left: calc(0.75*168px);
+    margin-bottom: calc(0.83*65px);
     align-items: center;
   }
 
   .return-button {
-    margin-right: 12.78px;
+    margin-right: calc(0.75*18px);
     margin-top: auto;
     margin-bottom: auto;
   }
 
   .return-to-main span {
-    font-size: 10.65px;
-    line-height: 14.2px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*20px);
     color: rgba(27, 31, 59, 0.65);
   }
 
   .main-top-content {
     display: flex;
-    margin-left: 143.42px;
+    margin-left: calc(0.75*202px);
   }
 
   .profile-navigation {
-    width: 168.98px;
-    margin-right: 42.6px;
-    margin-top: 22.01px;
+    width: calc(0.75*238px);
+    margin-right: calc(0.75*60px);
+    margin-top: calc(0.83*31px);
   }
 
   .profile-navigation li {
-    font-size: 14.2px;
-    line-height: 126.1599%;
-    margin-bottom: 11.36px;
+    font-size: calc(0.75*20px);
+    line-height: calc(0.83*177.69%);
+    margin-bottom: calc(0.83*16px);
   }
 
   .profile-navigation a li {
-    margin-bottom: 11.36px;
+    margin-bottom: calc(0.83*16px);
   }
 
   .profile-navigation li:last-child {
@@ -109,17 +109,81 @@
   }
 
   .top-information__header {
-    margin-bottom: 30.53px;
+    margin-bottom: calc(0.83*43px);
     font-style: normal;
     font-weight: 700;
-    font-size: 19.88px;
-    line-height: 26.98px;
+    font-size: calc(0.75*28px);
+    line-height: calc(0.83*38px);
     color: #000000;
   }
 
   .top-information__card {
-    width: 759.7px;
-    height: 405.41px;
+    width: calc(0.75*1070px);
+    height: calc(0.83*571px);
+    background: #D1E5D2;
+    border-radius: 20px;
+  }
+
+}
+
+@media screen and (max-width: 1370px) {
+  .return-to-main {
+    display: flex;
+    width: calc(0.71*180px);
+    margin-left: calc(0.71*168px);
+    margin-bottom: calc(0.71*65px);
+    align-items: center;
+  }
+
+  .return-button {
+    margin-right: calc(0.71*18px);
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .return-to-main span {
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*20px);
+    color: rgba(27, 31, 59, 0.65);
+  }
+
+  .main-top-content {
+    display: flex;
+    margin-left: calc(0.71*202px);
+  }
+
+  .profile-navigation {
+    width: calc(0.71*238px);
+    margin-right: calc(0.71*60px);
+    margin-top: calc(0.71*31px);
+  }
+
+  .profile-navigation li {
+    font-size: calc(0.71*20px);
+    line-height: calc(0.71*177.69%);
+    margin-bottom: calc(0.71*16px);
+  }
+
+  .profile-navigation a li {
+    margin-bottom: calc(0.71*16px);
+  }
+
+  .profile-navigation li:last-child {
+    margin-bottom: 0;
+  }
+
+  .top-information__header {
+    margin-bottom: calc(0.71*43px);
+    font-style: normal;
+    font-weight: 700;
+    font-size: calc(0.71*28px);
+    line-height: calc(0.71*38px);
+    color: #000000;
+  }
+
+  .top-information__card {
+    width: calc(0.71*1070px);
+    height: calc(0.71*571px);
     background: #D1E5D2;
     border-radius: 20px;
   }
