--- a/src/app/components/login-page/login-page.component.css
+++ b/src/app/components/login-page/login-page.component.css
@@ -8,7 +8,7 @@
     border-bottom: 2px solid #e9e9e9;
   }
 
-  .header-container span {
+  .header-container a {
     font-weight: 300;
     font-size: 48px;
     line-height: 56px;
@@ -156,17 +156,175 @@
   }
 }
 
-@media screen and (max-width: 1550px) {
+@media screen and (max-width: 1450px) {
   .header-container {
-    width: 1120.7279px;
-    height: 67.095px;
+    width: calc(0.75*1578.49px);
+    height: calc(0.71*94.5px);
+    margin-top: calc(0.71*27px);
+    margin-left: calc(0.75*172px);
+    margin-bottom: calc(0.71*140px);
+    border-bottom: 2px solid #e9e9e9;
+  }
+
+  .header-container a {
+    font-weight: 300;
+    font-size: calc(0.75*48px);
+    line-height: 56px;
+  }
+
+  .logo-img1 {
+    position: absolute;
+    width: calc(0.75*50px);
+    height: calc(0.71*49.74px);
+    left: calc(0.75*165px);
+    top: calc(0.71*30px);
+
+    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
+    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
+    transform: rotate(117.88deg);
+    border-radius: 50%;
+    opacity: 50%;
+  }
+
+  .card {
+    display: flex;
+    justify-content: space-between;
+    width: calc(0.75*1581px);
+    height: calc(0.83*522px);
+    margin-left: calc(0.75*203px);
+  }
+
+  .card-left-side {
+    font-size: calc(0.75*48px);
+    line-height: calc(0.83*65px);
+    color: #000000;
+  }
+
+  .title {
+    font-weight: 300;
+  }
+
+  .logo-img2 {
+    position: absolute;
+    left: calc(0.75*175px);
+    top: calc(0.83*325px);
+    opacity: 50%;
+  }
+
+  .card-right-side {
+    width: calc(0.75*774px);
+    background: rgba(190, 218, 195, 0.7);
+    border-radius: 20px;
+  }
+
+  .input-field {
+    width: calc(0.75*560px);
+    height: calc(0.83*60px);
+    border-radius: 10px;
+    margin-left: calc(0.75*107px);
+    background: #FBFBF5;
+  }
+
+  .input-field input {
+    width: calc(0.75*528px);
+    height: calc(0.83*57px);
+    font-weight: 300;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+    padding-left: calc(0.75*28px);
+    background: #FBFBF5;
+    border-radius: 10px;
+  }
+
+  .phone {
+    margin-top: calc(0.83*65px);
+    margin-bottom: calc(0.83*35px);
+  }
+
+  .sign-in {
+    width: calc(0.75*275px);
+    height: calc(0.83*54px);
+    background: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    margin-left: calc(0.75*249px);
+    margin-top: calc(0.83*40px);
+  }
+
+  .sign-in:hover {
+    background: #EDFAED;
+    border: 1px solid #6A6D79;
+  }
+
+  .sign-in:focus {
+    background: #EDFAED;
+    border: 1px solid #6A6D79;
+  }
+
+  .sign-in:active {
+    background: #8EBD9D;
+    border: 0px;
+  }
+
+  .btn-sign-in {
+    width: 100%;
+    height: 100%;
+    color: rgba(27, 31, 59, 0.6);
+    font-weight: 600;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+  }
+
+  .container-sign-up {
+    width: calc(0.75*355px);
+    height: calc(0.83*28px);
+    margin-top: calc(0.83*128px);
+    padding-left: calc(0.75*209px);
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
+  }
+
+  .container-sign-up span {
+    color: rgba(27, 31, 59, 0.6);
+    margin-right: calc(0.75*12px);
+  }
+
+  .container-sign-up a {
+    text-decoration-line: underline;
+    color: #4DA8F7;
+  }
+
+  .helper-text {
+    font-size: calc(0.75*15px);
+  }
+
+  .red-text {
+    display: inline-block;
+    color: red;
+    padding-top: calc(0.83*10px);
+  }
+
+  .invalid {
+    border: 1px red dotted;
+  }
+
+  .clear {
+    opacity: 50%;
+    background-color: #f5f5f2;
+  }
+}
+
+@media screen and (max-width: 1370px) {
+  .header-container {
+    width: calc(0.71*1578.49px);
+    height: calc(0.71*94.5px);
     margin-top: calc(0.71*27px);
     margin-left: calc(0.71*172px);
     margin-bottom: calc(0.71*140px);
     border-bottom: 2px solid #e9e9e9;
   }
 
-  .header-container span {
+  .header-container a {
     font-weight: 300;
     font-size: calc(0.71*48px);
     line-height: 56px;
