--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -148,16 +148,16 @@
   } */
 }
 
-@media screen and (max-width: 1550px) {
+@media screen and (max-width: 1450px) {
   .header-container {
     display: flex;
-    width: 1136px;
-    height: 53.25px;
-    margin-left: 113.6px;
-    margin-top: 35.5px;
-    border-bottom: 1.42px solid #e9e9e9;
+    width: calc(0.75*1600px);
+    height: calc(0.83*75px);
+    margin-left: calc(0.75*160px);
+    margin-top: calc(0.83*50px);
+    border-bottom: 2px solid #e9e9e9;
     justify-content: space-between;
-    padding-bottom: 3.55px;
+    padding-bottom: calc(0.83*5px);
   }
 
   .header-left-side {
@@ -175,17 +175,17 @@
   .title {
     font-family: 'Open Sans';
     font-weight: 300;
-    font-size: 34px;
-    line-height: 46.15px;
-    margin-right: 13.5px;
+    font-size: calc(0.75*48px);
+    line-height: calc(0.83*65px);
+    margin-right: calc(0.75*19px);
   }
 
   .logo-img {
     position: absolute;
-    width: 35.5px;
-    height: 35.315px;
-    left: 108.63px;
-    top: 42.6px;
+    width: calc(0.75*50px);
+    height: calc(0.83*49.74px);
+    left: calc(0.75*153px);
+    top: calc(0.83*60px);
 
     background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
     filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
@@ -194,64 +194,64 @@
   }
 
   .location-img {
-    width: 9.94px;
-    height: 11.36px;
-    margin-top: 7.1px;
-    margin-right: 9.23px;
+    width: calc(0.75*14px);
+    height: calc(0.83*16px);
+    margin-top: calc(0.83*10px);
+    margin-right: calc(0.75*13px);
   }
 
   .location-name {
-    margin-top: 7.1px;
+    margin-top: calc(0.83*10px);
   }
 
   .btn-add-coworking {
     background: #E0E0D6;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
-    width: 149.8px;
-    height: 38.34px;
-    margin-right: 20.59px;
+    width: calc(0.75*211px);
+    height: calc(0.83*54px);
+    margin-right: calc(0.75*29px);
     font-weight: 600;
-    font-size: 10.65px;
-    line-height: 19.88px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
     color: rgba(27, 31, 59, 0.6);
   }
 
   .btn-notification {
-    width: 14.2px;
-    height: 15.62px;
-    margin-right: 29.82px;
+    width: calc(0.75*20px);
+    height: calc(0.83*22px);
+    margin-right: calc(0.75*42px);
   }
 
   .btn-notification-img {
-    width: 14.2px;
-    height: 15.62px;
+    width: calc(0.75*20px);
+    height: calc(0.83*22px);
   }
 
   .profile-img {
-    margin-right: 12.07px;
-    width: 56.8px;
-    height: 56.8px;
+    margin-right: calc(0.75*17px);
+    width: calc(0.75*80px);
+    height: calc(0.83*80px);
   }
 
   .profile-img-img {
-    width: 56.8px;
-    height: 56.8px;
+    width: calc(0.75*80px);
+    height: calc(0.83*80px);
   }
 
   .profile-name {
-    font-size: 10.65px;
-    line-height: 19.88px;
+    font-size: calc(0.75*15px);
+    line-height: calc(0.83*28px);
     color: rgba(27, 31, 59, 0.8);
   }
 
   .dropdown {
     position: relative;
-    margin-top: 113.6px;
+    margin-top: calc(0.83*160px);
   }
 
   .dropdown-menu {
-    padding-top: 9.23px;
+    padding-top: calc(0.83*13px);
     background: #FBFBF5;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 7px;
@@ -270,7 +270,7 @@
   .dropdown-menu a {
     display: block;
     color: #494C62;
-    padding: 7.81px 7.81px;
+    padding: calc(0.83*11px) calc(0.75*11px);
     opacity: 0.7;
   }
 
@@ -279,14 +279,164 @@
   }
 
   .btn-settings {
-    width: 7.1px;
-    height: 7.1px;
+    height: calc(0.83*10px);
+    width: calc(0.75*10px);
     position: relative;
   }
 
   .btn-settings-img {
-    width: 7.1px;
-    height: 7.1px;
+    height: calc(0.83*10px);
+    width: calc(0.75*10px);
+  }
+
+  .settings li {
+    position: relative;
+  }
+
+  /* .settings li a {
+    display: block;
+  } */
+}
+
+@media screen and (max-width: 1370px) {
+  .header-container {
+    display: flex;
+    width: calc(0.71*1600px);
+    height: calc(0.71*75px);
+    margin-left: calc(0.71*160px);
+    margin-top: calc(0.71*50px);
+    border-bottom: 2px solid #e9e9e9;
+    justify-content: space-between;
+    padding-bottom: calc(0.71*5px);
+  }
+
+  .header-left-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .header-right-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .title {
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-size: calc(0.71*48px);
+    line-height: calc(0.71*65px);
+    margin-right: calc(0.71*19px);
+  }
+
+  .logo-img {
+    position: absolute;
+    width: calc(0.71*50px);
+    height: calc(0.71*49.74px);
+    left: calc(0.71*153px);
+    top: calc(0.71*60px);
+
+    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
+    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
+    transform: rotate(117.88deg);
+    border-radius: 50%;
+  }
+
+  .location-img {
+    width: calc(0.71*14px);
+    height: calc(0.71*16px);
+    margin-top: calc(0.71*10px);
+    margin-right: calc(0.71*13px);
+  }
+
+  .location-name {
+    margin-top: calc(0.71*10px);
+  }
+
+  .btn-add-coworking {
+    background: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    width: calc(0.71*211px);
+    height: calc(0.71*54px);
+    margin-right: calc(0.71*29px);
+    font-weight: 600;
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    color: rgba(27, 31, 59, 0.6);
+  }
+
+  .btn-notification {
+    width: calc(0.71*20px);
+    height: calc(0.71*22px);
+    margin-right: calc(0.71*42px);
+  }
+
+  .btn-notification-img {
+    width: calc(0.71*20px);
+    height: calc(0.71*22px);
+  }
+
+  .profile-img {
+    margin-right: calc(0.71*17px);
+    width: calc(0.71*80px);
+    height: calc(0.71*80px);
+  }
+
+  .profile-img-img {
+    width: calc(0.71*80px);
+    height: calc(0.71*80px);
+  }
+
+  .profile-name {
+    font-size: calc(0.71*15px);
+    line-height: calc(0.71*28px);
+    color: rgba(27, 31, 59, 0.8);
+  }
+
+  .dropdown {
+    position: relative;
+    margin-top: calc(0.71*160px);
+  }
+
+  .dropdown-menu {
+    padding-top: calc(0.71*13px);
+    background: #FBFBF5;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    transition: all .2s ease-out;
+  }
+
+  .dropdown-menu.show {
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .dropdown-menu a {
+    display: block;
+    color: #494C62;
+    padding: calc(0.71*11px) calc(0.71*11px);
+    opacity: 0.7;
+  }
+
+  .dropdown-menu a:hover {
+    opacity: 1;
+  }
+
+  .btn-settings {
+    height: calc(0.71*10px);
+    width: calc(0.71*10px);
+    position: relative;
+  }
+
+  .btn-settings-img {
+    height: calc(0.71*10px);
+    width: calc(0.71*10px);
   }
 
   .settings li {
