--- a/src/app/components/main-webpage/main-page/main-page.component.html
+++ b/src/app/components/main-webpage/main-page/main-page.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 <div class="banner-container">
+  <img src="assets/img/banner.png" class="banner" alt="banner">
   <p>Все коворкинги вашего города</p>
 </div>
 <div class="search">
